Switch to GitHub action

--- a/.env.pullpreview
+++ b/.env.pullpreview
@@ -4,3 +4,5 @@ LISTEN_ON=0.0.0.0:8000
 DATABASE_URL=postgresql://app:p4ssw0rd@postgres:5432/app?encoding=utf8&pool=5&timeout=5000
 CACHE_URL=redis://redis:6379/0
 JOB_WORKER_URL=redis://redis:6379/0
+RAILS_ENV=production
+RAILS_LOG_TO_STDOUT=yes
