--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,55 @@
-# https://semaphoreci.com/community/tutorials/dockerizing-a-ruby-on-rails-application
-postgres:
-  image: postgres:9.4.5
-  environment:
-    POSTGRES_USER: app
-    POSTGRES_PASSWORD: p4ssw0rd
-    POSTGRES_DB: app
-  ports:
-    - '5432:5432'
+version: '3'
+networks:
+  frontend:
+  backend:
+volumes:
+  pgdata:
+  appdata:
+services:
+  postgres:
+    image: postgres:9.4.5
+    environment:
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: p4ssw0rd
+      POSTGRES_DB: app
+    networks:
+      backend: {}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
-redis:
-  image: redis:3.0.5
-  ports:
-    - '6379:6379'
+  redis:
+    image: redis:3.0.5
+    networks:
+      backend: {}
 
-web:
-  build: .
-  links:
-    - postgres
-    - redis
-  volumes:
-    - .:/app
-  ports:
-    - '8000:8000'
-  env_file:
-    - .env.pullpreview
+  web:
+    build: .
+    command: "./docker/web"
+    depends_on:
+      - postgres
+      - redis
+      - worker
+    volumes:
+      - appdata:/app/files
+    restart: unless-stopped
+    networks:
+      frontend:
+      backend:
+    ports:
+      - '80:8000'
+    env_file:
+      - .env.pullpreview
 
-worker:
-  build: .
-  command: bundle exec sidekiq -C config/sidekiq.yml
-  links:
-    - postgres
-    - redis
-  volumes:
-    - .:/app
-  env_file:
-    - .env.pullpreview
+  worker:
+    build: .
+    command: "./docker/worker"
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - appdata:/app/files
+    networks:
+      backend:
+    restart: unless-stopped
+    env_file:
+      - .env.pullpreview
