--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ postgres:
     POSTGRES_DB: app
   ports:
     - '5432:5432'
+  volumes:
+    - ./export/db:/var/lib/postgresql/data
 
 redis:
   image: redis:3.0.5
