use new waitforit

--- a/docker-compose.pullpreview.yml
+++ b/docker-compose.pullpreview.yml
@@ -19,7 +19,7 @@ redis:
 
 web:
   build: .
-  command: "./docker/wait-for-it.sh -t 60 -h postgres -p 5432 --strict -- ./docker/web"
+  command: "/waitforit -command './docker/web' postgres 5432"
   links:
     - postgres
     - redis
