share volume between web and workeer

--- a/docker-compose.pullpreview.yml
+++ b/docker-compose.pullpreview.yml
@@ -37,8 +37,8 @@ worker:
   links:
     - postgres
     - redis
-  volumes:
-    - .:/app
+  volumes_from:
+    - web
   env_file:
     - .env.pullpreview
   memory: 384
