--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -1,46 +1,21 @@
 name: PullPreview
 on:
-  pull_request:
-    types: [labeled, unlabeled]
   push:
-    branches:
-      - master
+  pull_request:
+    types: [labeled, unlabeled, closed]
 
 jobs:
-  log:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-  up:
-    name: PullPreview Up
-    if: contains(github.event.pull_request.labels.*.name, 'pullpreview')
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
         path: app
-    - name: Deploy app
-      run: "docker run --rm -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -v $GITHUB_WORKSPACE/app:/app pullpreview/pullpreview up /app --admins crohr --name '${{ github.repository }}-${{ github.ref }}'"
+    - uses: pullpreview/action@master
+      with:
+        admins: crohr
+      env:
+        AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
+        AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
