--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         admins: crohr
         always_on: master
+        compose_files: "docker-compose.yml,docker-compose.staging.yml"
+        default_port: 443
       env:
         AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
