--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -11,5 +11,10 @@ services:
   proxy:
     image: svenstaro/ssl-proxy
     command: ["-from", "0.0.0.0:443", "-to", "web:8000"]
+    restart: unless-stopped
+    depends_on:
+      - web
+    networks:
+      - frontend
     ports:
       - "443:443"
