--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -10,7 +10,7 @@ services:
       - .env.staging
   proxy:
     image: svenstaro/ssl-proxy
-    command: ["-from", "0.0.0.0:443", "-to", "web:8000"]
+    command: ["-from", "0.0.0.0:443", "-to", "web:8000", "-domain=${PULLPREVIEW_PUBLIC_DNS}", "-redirectHTTP"]
     restart: unless-stopped
     depends_on:
       - web
@@ -18,3 +18,4 @@ services:
       - frontend
     ports:
       - "443:443"
+      - "80:80"
