--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -9,7 +9,7 @@ services:
     env_file:
       - .env.staging
   proxy:
-    image: pullpreview/ssl-proxy
+    image: pullpreview/ssl-proxy:v0.2.6
     command: ["-from", "0.0.0.0:443", "-to", "web:8000", "-domain=${PULLPREVIEW_PUBLIC_DNS}", "-redirectHTTP"]
     restart: unless-stopped
     depends_on:
