--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -15,6 +15,7 @@ jobs:
         admins: crohr
         always_on: master
         compose_files: "docker-compose.yml,docker-compose.staging.yml"
+        cidrs: "149.202.65.149/32"
         default_port: 443
       env:
         AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
