--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: pullpreview/action@v3a
+    - uses: pullpreview/action@v3
       with:
         admins: crohr
         always_on: master
         compose_files: "docker-compose.yml,docker-compose.staging.yml"
-        cidrs: "149.202.65.149/32"
         default_port: 443
+        instance_type: "nano_2_0"
       env:
         AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
