--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -16,7 +16,7 @@ jobs:
         always_on: master
         compose_files: "docker-compose.yml,docker-compose.staging.yml"
         default_port: 443
-        instance_type: "nano_2_0"
+        instance_type: "micro_2_0"
       env:
         AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
