--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -1,8 +1,10 @@
 name: PullPreview
 on:
   push:
-  pull_request:
-    types: [labeled, unlabeled, closed]
+    branches:
+      - master
+  pull_request_target:
+    types: [labeled, unlabeled, closed, synchronized, reopened]
 
 jobs:
   deploy:
@@ -10,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      ref: ${{ github.event.pull_request.head.sha }}
     - uses: pullpreview/action@v3
       with:
         admins: crohr
