--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    types: [labeled, unlabeled, opened, closed, synchronized, reopened]
+  pull_request_target:
+    types: [labeled, unlabeled, closed, synchronized, reopened]
 
 jobs:
   deploy:
