--- a/.github/workflows/pullpreview.yml
+++ b/.github/workflows/pullpreview.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-  pull_request_target:
+  pull_request:
     types: [labeled, unlabeled, closed, synchronize, reopened]
 
 jobs:
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
+      # with:
+        # ref: ${{ github.event.pull_request.head.sha }}
     - uses: pullpreview/action@v3
       with:
         admins: crohr
