--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 services:
   web:
     ports:
-      - '80:8000'
+      - "80:3000"
     env_file:
       - .env.development
   worker:
